# SheetMinds

./: .env.example  .gitignore  API_DOCS.md  API_README.md  LICENSE  README.md  api.py  main.py  pyproject.toml  requirements.txt  requriements.txt  run.sh  streamlit_app.py  testing.py
data_analysis_sandbox/: execute_me.py
examples/: basic_usage.py
src/: cli.py
src/agents/: base_agent.py  controller_agent.py  data_analysis_agent.py  formula_agent.py  visualization_agent.py
src/llm/: gemini_client.py
src/tools/: isolated_python_executor.py
